--- a/web/pages/main.html
+++ b/web/pages/main.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>测试 - Layui</title>
   <link rel="stylesheet" href="../layui/css/layui.css">
+  <link rel="stylesheet" href="./style/commonStyle.css">
 </head>
 <body>
 
@@ -12,8 +13,19 @@
   <div class="layui-colla-item">
     <h2 class="layui-colla-title">基础信息</h2>
     <div class="layui-colla-content layui-show">
-      Layui 作为一个前端界面组件库，但面向的却主要是后端开发者。
-      <br>你无需涉足前端的各种工具，只需面对浏览器本身，让一切你所需要的元素与交互，从这里信手拈来。
+      <table class="table1">
+        <tr>
+          <td class="vertical-center">
+            工作目录：<input type="text" autocomplete="off" placeholder="工作目录" class="layui-input" style="width: auto;display: inline;flex-grow: 1">
+          </td>
+          <td>
+            角色名称：<input type="text" autocomplete="off" placeholder="角色名称" class="layui-input" style="width: auto;display: inline">
+          </td>
+          <td>
+            <button type="submit" class="layui-btn">切换并刷新</button>
+          </td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
@@ -39,6 +51,7 @@
 <script src="../layui/layui.js"></script>
 <script src="../jquery/jquery-3.7.1.min.js"></script>
 <script src="./common/common_jquery.js"></script>
+<script src="./bean/commonBean.js"></script>
 <script>
   
   window.onload = function(){
