--- a/web/pages/main.html
+++ b/web/pages/main.html
@@ -54,6 +54,8 @@
 <script src="./bean/commonBean.js"></script>
 <script>
   
+  const BaseUrl = 'http://localhost:8000/'
+  
   window.onload = function(){
     layui.use(function(){
       
