--- a/web/pages/main.html
+++ b/web/pages/main.html
@@ -16,10 +16,10 @@
       <table class="table1">
         <tr>
           <td class="vertical-center">
-            工作目录：<input type="text" id="workspace" autocomplete="off" placeholder="工作目录" class="layui-input" style="width: auto;display: inline;flex-grow: 1">
+            工作目录：<input type="text" id="workspace" autocomplete="off" placeholder="工作目录" class="layui-input" style="width: auto;display: inline;flex-grow: 1" value="E:\GPT-SoVITS\Ref-Audio-Selector-V2\test">
           </td>
           <td>
-            角色名称：<input type="text" id="roleName" autocomplete="off" placeholder="角色名称" class="layui-input" style="width: auto;display: inline">
+            角色名称：<input type="text" id="roleName" autocomplete="off" placeholder="角色名称" class="layui-input" style="width: auto;display: inline" value="七七">
           </td>
           <td>
             <button type="submit" class="layui-btn" onclick="switchAndRefreshWorkspace()">切换并刷新</button>
