--- a/main.html
+++ b/main.html
@@ -46,6 +46,7 @@
 
 <!-- body 末尾处引入 layui -->
 <script src="web/layui/layui.js"></script>
+<script src="web/echarts/echarts.min.js"></script>
 <script src="web/jquery/jquery-3.7.1.min.js"></script>
 <script src="web/pages/common/common_jquery.js"></script>
 <script src="web/pages/bean/common_bean.js"></script>
@@ -104,7 +105,7 @@
       return
     }
     
-    $.ajax({
+    $.customAjax({
       url: BaseUrl + 'common/switch_role_workspace',
       type: 'POST',
       data: {
@@ -112,9 +113,9 @@
       },
       success: function (data) {
         if (data.code == 0) {
-          layer.msg('切换成功')
+          layui.layer.msg('切换成功')
         } else {
-          layer.msg(data.msg)
+          layui.layer.msg(data.msg)
         }
       }
     })
