--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
       <table class="table1">
         <tr>
           <td>
-            角色名称：<input type="text" id="roleName" autocomplete="off" placeholder="角色名称" class="layui-input" style="width: auto;display: inline" value="七七">
+            角色名称：<input type="text" id="roleName" autocomplete="on" placeholder="角色名称" class="layui-input" style="width: auto;display: inline" value="七七">
           </td>
           <td>
             <button type="submit" class="layui-btn" onclick="switchAndRefreshWorkspace()">切换并刷新</button>
