--- a/web/pages/business/reference_audio/report_result.html
+++ b/web/pages/business/reference_audio/report_result.html
@@ -75,6 +75,15 @@
                 });
             }
 
+            getSelectedScore(){
+                const _this = this
+                const score = $('#' + _this.viewId).find('input[name=audioScore]:checked').val()
+                if (!score){
+                    return ''
+                }
+                return score
+            }
+
             loadAudio(divElement, detailId){
                 const _this = this
                 if (divElement.html().trim() !== '') {
@@ -256,9 +265,7 @@
         }
 
         function getReportResult(viewId, audioId) {
-            const result = new C_ReportResult(viewId, audioId)
-            result.loadAudios()
-            return result
+            return new C_ReportResult(viewId, audioId)
         }
 
         return {
@@ -271,15 +278,15 @@
     <div id="echartDiv" style="width: 100%;height: 300px"></div>
     <table id="audioList" class="table2" >
         {{# layui.each(d.compareAudioDetailList, function(index, item){ }}
-            <tr id="item-{{item.id}}">
+            <tr id="item-{{item.id}}" style="height: 46px">
                 <td>
-                    <input name="audioScore" type="radio" value="{{item.score.toFixed(2)}}">
+                    <input name="audioScore" type="radio" value="{{item.score.toFixed(4)}}">
                 </td>
                 <td>{{index+1}}</td>
                 <td>{{item.score.toFixed(4)}}</td>
-                <td data-audio-path="{{item.id}}" style="width: 350px"></td>
+                <td data-audio-path="{{item.id}}" style="width: 350px;cursor: pointer"></td>
                 <td>{{item.compareAudio.category}}</td>
-                <td id="audioContent-{{item.id}}" class="single-line" title="{{item.compareAudio.content}}">{{item.compareAudio.content}}</td>
+                <td id="audioContent-{{item.id}}" class="single-line" title="{{item.compareAudio.content}}" style="cursor: pointer">{{item.compareAudio.content}}</td>
             </tr>
         {{# }) }}
     </table>
