--- a/main.html
+++ b/main.html
@@ -76,7 +76,7 @@
           
           const html = $(this).html()
           if (html == '参考音频') {
-            const C_ReferenceAudio$1 = ReferenceAudioSpace.getReferenceAudio('referenceAudioView').render()
+            ReferenceAudioSpace.getReferenceAudio('referenceAudioView').loadData(1)
           } else if (html == '推理任务') {
             const C_InferenceTask$1 = InferenceTaskSpace.getInferenceTask('inferenceTaskView').render()
           } else if (html == '结果评测') {
