--- a/web/pages/business/inference_task/inference_task.html
+++ b/web/pages/business/inference_task/inference_task.html
@@ -50,7 +50,7 @@
             openCreateInferenceTask(){
                 layer.open({
                     type: 1,
-                    area: ['90%', '90%'],
+                    area: ['95%', '95%'],
                     content: `<div id="createInferenceTaskView"></div>`,
                     btn: ['确定', '取消'],
                     yes: function(){
@@ -58,7 +58,8 @@
                     }
                 });
 
-                const C_TaskDetail$1 = TaskDetailSpace.getTaskDetail('createInferenceTaskView').render()
+                const C_TaskDetail$1 = TaskDetailSpace.getTaskDetail('createInferenceTaskView', 0)
+                C_TaskDetail$1.loadData()
             }
             
         }
