添加web基础结构

--- a/main.html
+++ b/main.html
@@ -47,6 +47,7 @@
 <!-- body 末尾处引入 layui -->
 <script src="web/layui/layui.js"></script>
 <script src="web/echarts/echarts.min.js"></script>
+<script src="web/xm_select/xm-select.js"></script>
 <script src="web/jquery/jquery-3.7.1.min.js"></script>
 <script src="web/pages/common/common_jquery.js"></script>
 <script src="web/pages/bean/common_bean.js"></script>
