添加web基础结构

--- a/web/pages/business/reference_audio/reference_audio.html
+++ b/web/pages/business/reference_audio/reference_audio.html
@@ -227,13 +227,13 @@
                     },
                     cols: [[
                         {field:'index', width:'5%', title: '序号', type: 'numbers'},
-                        {field:'audioName', width:'10%', title: '音频名称', templet: function(d, k){
+                        {field:'audioName', width:'10%', title: '音频名称', templet: function(d){
                                 return d.audioName;
                             }},
-                        {field:'category', width:'8%', title: '音频分类', templet: function(d, k){
+                        {field:'category', width:'8%', title: '音频分类', templet: function(d){
                                 return d.category;
                             }},
-                        {field:'audioPlay', width:'20%', title: '音频播放', templet: function(d, k){
+                        {field:'audioPlay', width:'20%', title: '音频播放', templet: function(d){
                                 return ` 
                                  <audio controls class="custom-audio">
                                     <source src="${d.audioPath}" type="audio/wav">
@@ -241,16 +241,16 @@
                                     您的浏览器不支持 HTML5 audio 标签。
                                 </audio>`
                             }},
-                        {field:'content', width:'20%', title: '音频内容', templet: function(d, k){
+                        {field:'content', width:'20%', title: '音频内容', templet: function(d){
                                 return d.content;
                             }},
-                        {field:'language', width:'8%', title: '音频语种', templet: function(d, k){
+                        {field:'language', width:'8%', title: '音频语种', templet: function(d){
                                 return d.language;
                             }},
-                        {field:'audioLength', width:'8%', title: '音频时长', sort: true, templet: function(d, k){
+                        {field:'audioLength', width:'8%', title: '音频时长', sort: true, templet: function(d){
                                 return d.audioLength.toFixed(1);
                             }},
-                        {field:'opt', width:'20%', title: '操作', templet: function(d, k){
+                        {field:'opt', width:'20%', title: '操作', templet: function(d){
                                  const html = []
                                 html.push(`<button type="button" class="layui-btn layui-btn-xs">切换分类</button>`)
                                 html.push(`<button type="button" class="layui-btn layui-btn-xs" data-go-to-compare="${d.id}">开始比对</button>`)
