--- a/web/pages/business/inference_task/inference_task.html
+++ b/web/pages/business/inference_task/inference_task.html
@@ -31,12 +31,78 @@
                     cellMinWidth: 80,
                     page: true,
                     cols: [[
-                        {field:'index', width:'5%', title: '序号'},
-                        {field:'taskName', width:'20%', title: '任务名称'},
-                        {field:'taskVariable', width:'20%', title: '任务变量'},
-                        {field:'hasInference', width:'20%', title: '是否已推理'},
-                        {field:'hasCheck', width:'20%', title: '是否已校验'},
-                        {field:'opt', width:'20%', title: '操作'},//查看详情，执行推理
+                        {field:'index', width:'5%', title: '序号', type: 'numbers'},
+                        {field:'taskName', width:'20%', title: '任务名称', templet: function(d){
+                                return d.audioName;
+                            }},
+                        {field:'compareType', width:'20%', title: '任务变量', templet: function(d){
+                                if (d.compareType === 'refer_audio') {
+                                    return '参考音频'
+                                }
+                                if (d.compareType === 'gpt_model') {
+                                    return 'GPT模型'
+                                }
+                                if (d.compareType === 'vits_model') {
+                                    return 'Vits模型'
+                                }
+                                if (d.compareType === 'top_k') {
+                                    return 'top_k值'
+                                }
+                                if (d.compareType === 'top_p') {
+                                    return 'top_p值'
+                                }
+                                if (d.compareType === 'temperature') {
+                                    return 'temperature值'
+                                }
+                                if (d.compareType === 'speed') {
+                                    return 'speed值'
+                                }
+                                if (d.compareType === 'text_delimiter') {
+                                    return '文本分隔符'
+                                }
+                                if (d.compareType === 'other') {
+                                    return '其余参数'
+                                }
+                                return d.compareType;
+                            }},
+                        {field:'inferenceStatus', width:'20%', title: '推理状态', templet: function(d){
+                                if (d.inferenceStatus == 0) {
+                                    return '待推理'
+                                }
+                                if (d.inferenceStatus == 1) {
+                                    return '部分推理'
+                                }
+                                if (d.inferenceStatus == 2) {
+                                    return '已完成'
+                                }
+                                return d.inferenceStatus
+                            }},
+                        {field:'executeTextSimilarity', width:'20%', title: '是否已完成文本相似度分析', templet: function(d){
+                                if (d.executeTextSimilarity == 1) {
+                                    return '是'
+                                }
+                                return '否'
+                            }},
+                        {field:'executeAudioSimilarity', width:'20%', title: '是否已完成音频相似度分析', templet: function(d){
+                                if (d.executeAudioSimilarity == 1) {
+                                    return '是'
+                                }
+                                return '否'
+                            }},
+                        {field:'opt', width:'20%', title: '操作', templet: function(d){
+                                const html = []
+                                if (d.inferenceStatus == 0) {
+                                    html.push(`<button type="button" class="layui-btn layui-btn-xs">编辑</button>`)
+                                } else {
+                                    html.push(`<button type="button" class="layui-btn layui-btn-xs">查看</button>`)
+                                }
+                                if (d.inferenceStatus == 2 && d.executeTextSimilarity == 1 && d.executeAudioSimilarity == 1) {
+                                    html.push(`<button type="button" class="layui-btn layui-btn-xs">结果评测</button>`)
+                                } else {
+                                    html.push(`<button type="button" class="layui-btn layui-btn-xs">开始执行</button>`)
+                                }
+                                return html.join(' ');
+                            }},//查看详情，执行推理
                     ]],
                     done: function(){
 
