添加web基础结构

--- a/main.html
+++ b/main.html
@@ -67,6 +67,8 @@
               'web/pages/business/audio_packaging/audio_packaging.html',
               'web/pages/business/inference_task/inference_task.html',
               'web/pages/business/inference_task/task_detail.html',
+              'web/pages/business/inference_task/reference_select.html',
+              'web/pages/business/inference_task/text_manager.html',
               'web/pages/business/long_text_inference/long_text_inference.html',
               'web/pages/business/reference_audio/reference_audio.html',
               'web/pages/business/reference_audio/report_result.html',
